--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,18 +3,23 @@ certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==0.5.0
 Django==1.11.3
 django-cors-headers==2.4.0
 django-crispy-forms==1.7.2
 django-filter==1.1.0
+django-heroku==0.3.1
 djangorestframework==3.7.0
 djangorestframework-filters==0.10.2
+gunicorn==19.9.0
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 pep8==1.7.1
+psycopg2==2.7.7
 pytz==2018.9
 requests==2.21.0
 uritemplate==3.0.0
 urllib3==1.24.1
+whitenoise==4.1.2
